@@ -1,3 +1,9 @@
+2011-07-14  Michael Albinus  <michael.albinus@gmx.de>
+
+	* debbugs-gnu.el (debbugs-gnu-subject): New defvar.
+	(debbugs-gnu-select-report): Set it buffer local.
+	(debbugs-gnu-summary-mode): Use it for adapting subject of replies.
+
 2011-07-13  Michael Albinus  <michael.albinus@gmx.de>
 
 	* debbugs.el (debbugs-get-bugs): Weaken syntax for packages (and
